--- a/week4/day3-task/calender-app/package.json
+++ b/week4/day3-task/calender-app/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^8.3.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-big-calendar": "^1.18.0",
     "react-dom": "^19.1.0",
