--- a/week5/day4-task/package.json
+++ b/week5/day4-task/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "nodemon": "^3.1.10",
-    "uuid": "^11.1.0"
+    "logger": "^0.0.1",
+    "nodemon": "^3.1.10"
   }
 }
