--- a/week5/day3-task/package.json
+++ b/week5/day3-task/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
+    "mongoose": "^8.15.1",
     "nodemon": "^3.1.10",
     "uuid": "^11.1.0"
   }
